fix: overflow issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -46,7 +46,6 @@ body {
     font-family: "Roboto";
     color: azure;
     outline: none;
-    overflow: hidden;
 }
 
 textarea,
